@@ -863,6 +863,16 @@ void edit_refresh(void)
 }
 
 /*
+ * Same as above, but touch the window first so everything is redrawn.
+ */
+void edit_refresh_clearok(void)
+{
+    clearok(edit, TRUE);
+    edit_refresh();
+    clearok(edit, FALSE);
+}
+
+/*
  * Nice generic routine to update the edit buffer given a pointer to the
  * file struct =) 
  */
@@ -1074,7 +1084,7 @@ int total_refresh(void)
     clearok(edit, FALSE);
     clearok(topwin, FALSE);
     clearok(bottomwin, FALSE);
-
+    edit_refresh();
     return 1;
 }
 
